--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
   <meta http-equiv="Cache-Control" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <meta http-equiv="Pragma" content="no-cache">
+  <base href="http://opennorth.github.com/popolo-standard/">
 </head>
 <body class="{{ page.id }}-page">
 
