--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
+  <link rel="stylesheet" href="/css/github.css">
   <link rel="stylesheet" href="/css/style.css">
   <script src="/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
