--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,7 @@
   <div class="navbar-inner">
     <a class="brand" href="/">Popolo</a>
     <ul class="nav">
-      <li id="data"><a href="/data.html">Data standard</a></li>
+      <li id="data"><a href="/data.html">Data specification</a></li>
       <li id="api"><a href="/api.html">API specification</a></li>
       <li id="reference"><a href="https://github.com/opennorth/popolo">Reference implementation</a></li>
     </ul>
