--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,13 +2,13 @@
   <div class="navbar-inner">
     <a class="brand" href="/">Popolo</a>
     <ul class="nav">
-      <li id="specs"><a href="/specs/">Specification</a></li>
+      <li id="specification"><a href="/specs/">Specification</a></li>
       <li id="person"><a href="/specs/person.html">Person</a></li>
       <li id="naming"><a href="/specs/naming.html">Naming</a></li>
       <li id="organization"><a href="/specs/organization.html">Organization</a></li>
       <li id="post"><a href="/specs/post.html">Post</a></li>
-      <li id="Membership"><a href="/specs/membership.html">Membership</a></li>
-      <li id="Address"><a href="/specs/address.html">Address</a></li>
+      <li id="membership"><a href="/specs/membership.html">Membership</a></li>
+      <li id="address"><a href="/specs/address.html">Address</a></li>
     </ul>
   </div>
 </div>
