--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,12 @@
   padding-top: 1em;
 }
 
-.data-page #data a,
-.data-page #data a:hover,
-.data-page #data a:focus,
+.specification-page #specification a,
+.specification-page #specification a:hover,
+.specification-page #specification a:focus,
+.address-page #address a,
+.address-page #address a:hover,
+.address-page #address a:focus,
 .area-page #area a,
 .area-page #area a:hover,
 .area-page #area a:focus,
@@ -13,7 +16,22 @@
 .document-page #document a:focus,
 .event-page #event a,
 .event-page #event a:hover,
-.event-page #event a:focus {
+.event-page #event a:focus,
+.membership-page #membership a,
+.membership-page #membership a:hover,
+.membership-page #membership a:focus,
+.naming-page #naming a,
+.naming-page #naming a:hover,
+.naming-page #naming a:focus,
+.organization-page #organization a,
+.organization-page #organization a:hover,
+.organization-page #organization a:focus,
+.person-page #person a,
+.person-page #person a:hover,
+.person-page #person a:focus,
+.post-page #post a,
+.post-page #post a:hover,
+.post-page #post a:focus {
   color: #555555;
   text-decoration: none;
   background-color: #e5e5e5;
