split out name components into a new doc, add person:patronymicName and con:sortName

--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,9 @@
 .membership-page #membership a,
 .membership-page #membership a:hover,
 .membership-page #membership a:focus,
-.naming-page #naming a,
-.naming-page #naming a:hover,
-.naming-page #naming a:focus,
+.name-component-page #name-component a,
+.name-component-page #name-component a:hover,
+.name-component-page #name-component a:focus,
 .organization-page #organization a,
 .organization-page #organization a:hover,
 .organization-page #organization a:focus,
