--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,10 @@ td {
   vertical-align: top;
 }
 
+ol p {
+  margin: 0;
+}
+
 @media (max-width: 1199px) {
   table.table-terms {
     width: auto;
