start merging in standard reuse section

--- a/_layouts/specification.html
+++ b/_layouts/specification.html
@@ -9,6 +9,7 @@ layout: default
       <li><a href="#scope">Scope</a></li>
       <li><a href="#conformance">Conformance</a></li>
       <li><a href="#use-cases-and-requirements">Requirements</a></li>
+      <li><a href="#standard-reuse">Standard reuse</a></li>
       <li><a href="#classes-and-properties">Classes</a></li>
       <li><a href="#serialization">Serialization</a></li>
       <li><a href="#history">Change history</a></li>
