--- a/css/style.css
+++ b/css/style.css
@@ -117,3 +117,28 @@ em.rfc2119 {
      -moz-box-shadow: none;
           box-shadow: none;
 }
+
+.well-example {
+  position: relative;
+  padding-top: 40px;
+  background-color: #fff;
+  -webkit-box-shadow: none;
+     -moz-box-shadow: none;
+          box-shadow: none;
+}
+
+.well-example:after {
+  content: "Use Case";
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  padding: 3px 7px;
+  font-size: 12px;
+  font-weight: bold;
+  background-color: #f5f5f5;
+  border: 1px solid #ddd;
+  color: #9da0a4;
+  -webkit-border-radius: 4px 0 4px 0;
+     -moz-border-radius: 4px 0 4px 0;
+          border-radius: 4px 0 4px 0;
+}
