begin changing Address to ContactDetail

--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@
 .specification-page #specification a,
 .specification-page #specification a:hover,
 .specification-page #specification a:focus,
-.address-page #address a,
-.address-page #address a:hover,
-.address-page #address a:focus,
+.contact-detail-page #contact-detail a,
+.contact-detail-page #contact-detail a:hover,
+.contact-detail-page #contact-detail a:focus,
 .area-page #area a,
 .area-page #area a:hover,
 .area-page #area a:focus,
