remove links to closed issues, add para of where to find existing specs

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,7 +7,7 @@
       <li id="organization"><a href="/specs/organization.html">Organization</a></li>
       <li id="post"><a href="/specs/post.html">Post</a></li>
       <li id="membership"><a href="/specs/membership.html">Membership</a></li>
-      <li id="contact-detail"><a href="/specs/contact-detail.html">Contact detail</a></li>
+      <li id="contact-detail"><a href="/specs/contact-detail.html">Contact Detail</a></li>
     </ul>
   </div>
 </div>
