--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,9 @@
 .membership-page #membership a,
 .membership-page #membership a:hover,
 .membership-page #membership a:focus,
-.name-component-page #name-component a,
-.name-component-page #name-component a:hover,
-.name-component-page #name-component a:focus,
+.name-component-page #person>a,
+.name-component-page #person>a:hover,
+.name-component-page #person>a:focus,
 .organization-page #organization a,
 .organization-page #organization a:hover,
 .organization-page #organization a:focus,
