--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,6 +9,7 @@
           <b class="caret"></b>
         </a>
         <ul class="dropdown-menu" role="menu" aria-labelledby="person-button">
+          <li><a tabindex="-1" href="/specs/person.html">Person</a></li>
           <li><a tabindex="-1" href="/specs/person/name-component.html">Name Component</a></li>
         </ul>
       </li>
