move survey and terms to appendices

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -37,6 +37,8 @@
           <b class="caret"></b>
         </a>
         <ul class="dropdown-menu" role="menu" aria-labelledby="appendices-button">
+          <li><a tabindex="-1" href="/appendices/survey.html">Survey of existing specifications</a></li>
+          <li><a tabindex="-1" href="/appendices/terms.html">Inventory of terms from survey</a></li>
           <li><a tabindex="-1" href="/appendices/examples.html">Examples JSON documents</a></li>
           <li><a tabindex="-1" href="/appendices/data-patterns.html">JSON data design patterns</a></li>
           <li><a tabindex="-1" href="/appendices/components.html">Best practices for software components</a></li>
