--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
+  <link rel="stylesheet" href="/css/highlight.github.css">
   <link rel="stylesheet" href="/css/github.css">
   <link rel="stylesheet" href="/css/style.css">
   <script src="/js/vendor/modernizr-2.6.2.min.js"></script>
@@ -29,6 +30,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
 <script src="/js/bootstrap.min.js"></script>
+<script src="/js/highlight.pack.js"></script>
 <script src="/js/scripts.js"></script>
 
 <script>
