--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-.navbar {
-  padding-top: 1em;
-}
-
 .specification-page #specification>a,
 .specification-page #specification>a:hover,
 .specification-page #specification>a:focus,
@@ -49,6 +45,10 @@
           box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
 }
 
+pre {
+  background-color: #f8f8ff;
+}
+
 blockquote p {
   font-size: 14px;
   line-height: 1.5em;
@@ -74,6 +74,10 @@ td {
 
 ol p {
   margin: 0;
+}
+
+footer {
+  text-align: center;
 }
 
 @media (max-width: 1199px) {
@@ -105,13 +109,13 @@ table.table-widest td {
   width: 9em;
 }
 
-footer {
-  text-align: center;
-}
-
 em.rfc2119 {
   font-style: normal;
   font-variant: small-caps;
+}
+
+.navbar {
+  padding-top: 1em;
 }
 
 .note {
