add another json pattern

--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,9 @@
 .examples-page #appendices>a,
 .examples-page #appendices>a:hover,
 .examples-page #appendices>a:focus,
-.data-patterns-page #appendices>a,
-.data-patterns-page #appendices>a:hover,
-.data-patterns-page #appendices>a:focus,
+.json-patterns-page #appendices>a,
+.json-patterns-page #appendices>a:hover,
+.json-patterns-page #appendices>a:focus,
 .components-page #appendices>a,
 .components-page #appendices>a:hover,
 .components-page #appendices>a:focus {
