add links to api design patterns

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -40,8 +40,10 @@
           <li><a tabindex="-1" href="/appendices/survey.html">Survey of existing specifications</a></li>
           <li><a tabindex="-1" href="/appendices/terms.html">Inventory of terms from survey</a></li>
           <li><a tabindex="-1" href="/appendices/examples.html">Examples JSON documents</a></li>
-          <li><a tabindex="-1" href="/appendices/json-patterns.html">JSON data design patterns</a></li>
           <li><a tabindex="-1" href="/appendices/components.html">Best practices for software components</a></li>
+          <li><a tabindex="-1" href="/appendices/data-patterns.html">Data model patterns</a></li>
+          <li><a tabindex="-1" href="/appendices/json-patterns.html">JSON serialization patterns</a></li>
+          <li><a tabindex="-1" href="/appendices/api-patterns.html">API design patterns</a></li>
         </ul>
       </li>
     </ul>
