--- a/_layouts/specification.html
+++ b/_layouts/specification.html
@@ -4,18 +4,18 @@ layout: default
 {% include navigation.html %}
 
 <div class="row">
-  <div class="span2">
-    <ul class="nav nav-tabs nav-stacked">
-      <li><a href="#scope">Scope</a></li>
-      <li><a href="#conformance">Conformance</a></li>
-      <li><a href="#use-cases-and-requirements">Requirements</a></li>
-      <li><a href="#standard-reuse">Standard reuse</a></li>
-      <li><a href="#classes-and-properties">Classes</a></li>
-      <li><a href="#serialization">Serialization</a></li>
-      <li><a href="#history">Change history</a></li>
+  <div class="col-md-2" role="navigation">
+    <ul class="list-group">
+      <li class="list-group-item"><a href="#scope">Scope</a></li>
+      <li class="list-group-item"><a href="#conformance">Conformance</a></li>
+      <li class="list-group-item"><a href="#use-cases-and-requirements">Requirements</a></li>
+      <li class="list-group-item"><a href="#standard-reuse">Standard reuse</a></li>
+      <li class="list-group-item"><a href="#classes-and-properties">Classes</a></li>
+      <li class="list-group-item"><a href="#serialization">Serialization</a></li>
+      <li class="list-group-item"><a href="#history">Change history</a></li>
     </ul>
   </div>
-  <div class="span10">
+  <div class="col-md-10">
 {{ content }}
   </div>
 </div>
