--- a/_layouts/class.html
+++ b/_layouts/class.html
@@ -4,16 +4,16 @@ layout: default
 {% include navigation.html %}
 
 <div class="row">
-  <div class="span3">
-    <ul class="nav nav-tabs nav-stacked">
-      <li><a href="#use-cases-and-requirements">Use cases &amp; requirements</a></li>
-      <li><a href="#standard-reuse">Standard reuse</a></li>
-      <li><a href="#classes-and-properties">Classes and properties</a></li>
-      <li><a href="#serialization">Serialization</a></li>
-      <li><a href="#code-lists">Code lists</a></li>
+  <div class="col-md-3" role="navigation">
+    <ul class="list-group">
+      <li class="list-group-item"><a href="#use-cases-and-requirements">Use cases &amp; requirements</a></li>
+      <li class="list-group-item"><a href="#standard-reuse">Standard reuse</a></li>
+      <li class="list-group-item"><a href="#classes-and-properties">Classes and properties</a></li>
+      <li class="list-group-item"><a href="#serialization">Serialization</a></li>
+      <li class="list-group-item"><a href="#code-lists">Code lists</a></li>
     </ul>
   </div>
-  <div class="span9">
+  <div class="col-md-9">
 {{ content }}
   </div>
 </div>
