--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -43,13 +43,16 @@
           Appendices <b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
-          <li><a href="/appendices/survey.html">Survey of existing specifications</a></li>
-          <li><a href="/appendices/terms.html">Inventory of terms from survey</a></li>
           <li><a href="/appendices/examples.html">Examples JSON documents</a></li>
-          <li><a href="/appendices/components.html">Best practices for software components</a></li>
+          <li><a href="/appendices/multilingualization.html">Multilingualization</a></li>
+          <li><a href="/appendices/handling-duplicates.html">Handling duplicates</a></li>
+          <li role="presentation" class="divider"></li>
+          <li><a href="/appendices/survey.html">Survey of existing specifications</a></li>
+          <li><a href="/appendices/terms.html">Inventory of terms from the survey</a></li>
+          <li role="presentation" class="divider"></li>
           <li><a href="/appendices/data-patterns.html">Data model patterns</a></li>
           <li><a href="/appendices/json-patterns.html">JSON serialization patterns</a></li>
-          <li><a href="/appendices/api-patterns.html">API design patterns</a></li>
+          <li><a href="/appendices/components.html">Best practices for software components</a></li>
         </ul>
       </li>
     </ul>
