add links to new classes

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -25,19 +25,31 @@
           <li><a href="/specs/#history">Change history</a></li>
         </ul>
       </li>
-      <li id="person" class="dropdown">
+      <li id="people-and-organizations" class="dropdown">
         <a href="/specs/person.html" class="dropdown-toggle" data-toggle="dropdown" data-target="#">
-          Person <b class="caret"></b>
+          People and organizations <b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
-          <li><a href="/specs/person.html">Person</a></li>
-          <li><a href="/specs/person/name-component.html">Name Component</a></li>
+          <li id="person"><a href="/specs/person.html">Person</a></li>
+          <li id="organization"><a href="/specs/organization.html">Organization</a></li>
+          <li id="membership"><a href="/specs/membership.html">Membership</a></li>
+          <li id="post"><a href="/specs/post.html">Post</a></li>
+          <li id="contact-detail"><a href="/specs/contact-detail.html">Contact Detail</a></li>
+          <li id="name-component"><a href="/specs/person/name-component.html">Name Component</a></li>
         </ul>
       </li>
-      <li id="organization"><a href="/specs/organization.html">Organization</a></li>
-      <li id="membership"><a href="/specs/membership.html">Membership</a></li>
-      <li id="post"><a href="/specs/post.html">Post</a></li>
-      <li id="contact-detail"><a href="/specs/contact-detail.html">Contact Detail</a></li>
+      <li id="area"><a href="/specs/area.html">Area</a></li>
+      <li id="voting" class="dropdown">
+        <a href="/specs/vote-event.html" class="dropdown-toggle" data-toggle="dropdown" data-target="#">
+          Motions and voting <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li id="motion"><a href="/specs/motion.html">Motion</a></li>
+          <li id="vote-event"><a href="/specs/vote-event.html">Vote Event</a></li>
+          <li id="count"><a href="/specs/count.html">Count</a></li>
+          <li id="vote"><a href="/specs/vote.html">Vote</a></li>
+        </ul>
+      </li>
       <li id="appendices" class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
           Appendices <b class="caret"></b>
