--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,9 @@ blockquote p {
 .membership-page #membership a,
 .membership-page #membership a:hover,
 .membership-page #membership a:focus,
+.name-component-page #name-component>a,
+.name-component-page #name-component>a:hover,
+.name-component-page #name-component>a:focus,
 .organization-page #organization a,
 .organization-page #organization a:hover,
 .organization-page #organization a:focus,
@@ -142,6 +145,21 @@ blockquote p {
 .post-page #post a,
 .post-page #post a:hover,
 .post-page #post a:focus,
+.area-page #area a,
+.area-page #area a:hover,
+.area-page #area a:focus,
+.motion-page #motion a,
+.motion-page #motion a:hover,
+.motion-page #motion a:focus,
+.vote-event-page #vote-event a,
+.vote-event-page #vote-event a:hover,
+.vote-event-page #vote-event a:focus,
+.count-page #count a,
+.count-page #count a:hover,
+.count-page #count a:focus,
+.vote-page #vote a,
+.vote-page #vote a:hover,
+.vote-page #vote a:focus,
 .appendix-page #appendices>a,
 .appendix-page #appendices>a:hover,
 .appendix-page #appendices>a:focus {
