add an appendix about adding metadata terms

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -57,6 +57,7 @@
         <ul class="dropdown-menu">
           <li><a href="/appendices/examples.html">Examples JSON documents</a></li>
           <li><a href="/appendices/multilingualization.html">Multilingualization</a></li>
+          <li><a href="/appendices/adding-metadata.html">Adding metadata</a></li>
           <li><a href="/appendices/handling-duplicates.html">Handling duplicates</a></li>
           <li role="presentation" class="divider"></li>
           <li><a href="/appendices/survey.html">Survey of existing specifications</a></li>
