--- a/src/terms.haml
+++ b/src/terms.haml
@@ -17,7 +17,10 @@
             %td
               - if entries[term]
                 - if entries[term]['term'].nil? && entries[term]['url'].nil?
-                  = entries[term]['label']
+                  - if entries[term]['label'][/(>)?([^<>]+?)(<)?/, 2].size > 15
+                    %abbr(title="#{entries[term]['label']}") #{entries[term]['label'].sub(/(>)?([^<>]{15})[^<>]+?(<)?/, '\1\2\3')}…
+                  - else
+                    = entries[term]['label']
                 - elsif entries[term]['url']
                   %a(href="#{entries[term]['url']}")
                     - if entries[term]['label']
