--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,10 @@
   <link rel="stylesheet" href="/css/highlight.github.css">
   <link rel="stylesheet" href="/css/github.css">
   <link rel="stylesheet" href="/css/style.css">
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 <body class="{{ page.id }}-page">
 
